--- a/meeting-notes/2024-02-01.md
+++ b/meeting-notes/2024-02-01.md
@@ -2,19 +2,16 @@
 **Date:2/1/2024**
 
 ## Agenda
-1. Discuss delagation of SDP
+1. Discuss delagation of SDP And work on SDP
 
 ## Notes
-1. Response to Item 1
+1. Moving the thursday meeting to sundays
 
 ## Action Items
-* Group Member `n`
-    * Action Item 1
-    * Action Item 2
-    * Action Item 3
+* Group Member `All`
+    * Meet on sunday to discuss futher
 
 ## Contributors
-Remove this line. Each Member should directly add their name as a _separate commit_ from the creation of the meeting-minutes.md file
-* Group Member
+* Bella Brickler
 * Group Member
 * Group Member
