Meeting notes for 2/4/24

--- a/meeting-notes/2024-02-04.md
+++ b/meeting-notes/2024-02-04.md
@@ -6,11 +6,16 @@
 2. 
 
 ## Notes
-1. 
+1. Completed SDP
+2. Talked about overall communication during project
+3. Delegated meeting times
+4. First meeting of the week: delegating tasks
+5. Second meeting of the week: stand-up (discussing what we've done and getting help)
+6. Can always get help early from each other or Cogan
 
 ## Action Items
 * Group Member `All`
-    * 
+    * Research game engine before Tuesday class
 
 ## Contributors
-* 
+* Heidi Raber
