ren attendance + grammar edits

--- a/meeting-notes/2024-02-04.md
+++ b/meeting-notes/2024-02-04.md
@@ -3,7 +3,6 @@
 
 ## Agenda
 1. Work on SDP
-2. 
 
 ## Notes
 1. Completed SDP
@@ -21,3 +20,4 @@
 * Heidi Raber
 * Joe Claborn
 * Bella Brickler
+* Ren Paxson
