--- a/meeting-notes/2024-02-06.md
+++ b/meeting-notes/2024-02-06.md
@@ -14,5 +14,5 @@
 ## Contributors
 Remove this line. Each Member should directly add their name as a _separate commit_ from the creation of the meeting-minutes.md file
 * Bella Brickler
-* Group Member
+* Ren Paxson
 * Group Member
