action items updated

--- a/meeting-notes/2024-02-06.md
+++ b/meeting-notes/2024-02-06.md
@@ -8,8 +8,8 @@
 1. Everyone has a working IDE and github desktop app
 
 ## Action Items
-* Group Member `n`
-    * Action Item 1
+* Group Member `all`
+    * follow the steps of "simple game" (https://libgdx.com/wiki/start/a-simple-game)
 
 ## Contributors
 Remove this line. Each Member should directly add their name as a _separate commit_ from the creation of the meeting-minutes.md file
