meeting minutes : edit action items

--- a/meeting-notes/2024-02-08.md
+++ b/meeting-notes/2024-02-08.md
@@ -5,12 +5,12 @@
 1. set up libGDX
 2. discuss 'simple game'
 
-## Notes
-1. 
 
 ## Action Items
 * Group Member `all`
-    * follow the steps of the simple game
+    * follow the steps of the simple game + extending simple game (looking at main menu specifically)
+      * https://libgdx.com/wiki/start/a-simple-game
+      * finish by 2/13
 
 ## Contributors
 Remove this line. Each Member should directly add their name as a _separate commit_ from the creation of the meeting-minutes.md file
