--- a/meeting-notes/2024-02-08.md
+++ b/meeting-notes/2024-02-08.md
@@ -15,3 +15,4 @@
 ## Contributors
 Remove this line. Each Member should directly add their name as a _separate commit_ from the creation of the meeting-minutes.md file
 * Ren Paxson
+* Heidi Raber
