meeting minute notes

--- a/meeting-notes/2024-02-13.md
+++ b/meeting-notes/2024-02-13.md
@@ -6,13 +6,12 @@
 2. Defining Sprint 1
 
 ## Notes
-1. Response to Item 1
-2. Response to Item 2
+1.
+2. Making a sprints folder to define what tasks and who is doing each task
 
 ## Action Items
-* Group Member `n`
-    * Action Item 1
-    * Action Item 2
+* Group Member `all`
+    * Do spring tasks
 
 ## Contributors
 * Bella Brickler
