delegated tasks for design mock up

--- a/meeting-notes/2024-02-16.md
+++ b/meeting-notes/2024-02-16.md
@@ -11,9 +11,10 @@
 
 ## Action Items
 * Group Member `n`
-    * Action Item 1
-    * Action Item 2
-    * Action Item 3
+    * Bella: Data (70)
+    * Heidi: Story (100) (90-91) (40)
+    * Ren: GUI (60-65) (75-80)
+    * Jo: Combat (110-130)
 
 ## Contributors
 * Bella Brickler
