--- a/meeting-notes/2024-02-16.md
+++ b/meeting-notes/2024-02-16.md
@@ -14,9 +14,10 @@
     * Bella: Data (70)
     * Heidi: Story (100) (90-91) (40)
     * Ren: GUI (60-65) (75-80)
-    * Jo: Combat (110-130)
+    * Joe: Combat (110-130)
 
 ## Contributors
 * Bella Brickler
 * Heidi Raber
 * Ren Paxson
+* Joe Claborn
