meeting minutes notes

--- a/meeting-notes/2024-03-20.md
+++ b/meeting-notes/2024-03-20.md
@@ -3,15 +3,15 @@
 
 ## Agenda
 1. Discuss Characters
-2. Item 2
-3. Item 3
+2. Discuss Design Doc Sections
 
 ## Notes
-1. Response to Item 1
+1. 
+2. Each person will keep working on the previously assigned portions of the doc, reach out in discord if finish ealier or have more time
 
 ## Action Items
-* Group Member `n`
-    * Action Item 1
+* Group Member `all`
+    * Work on design doc sections
     * Action Item 2
     * Action Item 3
 
