--- a/meeting-notes/2024-02-20.md
+++ b/meeting-notes/2024-02-20.md
@@ -12,10 +12,8 @@
 ## Action Items
 * Group Member `all`
     * Work on design doc sections
-    * Action Item 2
-    * Action Item 3
 
 ## Contributors
 * Bella Brickler
 * Heidi Raber
-* Group Member
+* Ren Paxson
