--- a/meeting-notes/2024-02-23.md
+++ b/meeting-notes/2024-02-23.md
@@ -5,7 +5,7 @@
 1. Review design doc
 
 ## Notes
-1. Response to Item 1
+1. Requriement 70 has been completed. Character design is in progross and going well. Combat has been discussed and what needs to be done there has been gone over.
 
 ## Action Items
 * Group Member `n`
