--- a/sprints/2-23--3-5.md
+++ b/sprints/2-23--3-5.md
@@ -1,6 +1,6 @@
 # Sprint 2: Design Document
 
-Bella: All requriments related to data access and UI backend
-Heidi: Requirments involving story elements, events, etc
-Ren: UI design (mocks), sprints, imargery
+Bella: All requirements related to data access and UI backend
+Heidi: Requirements involving story elements, events, etc
+Ren: UI design (mocks), sprints, imagery
 Joe: Combat design, how combat works which attacks the monsters should use, how to give the monsters a rudimentary ai.
