ren attendance + action items

--- a/meeting-notes/2024-02-23.md
+++ b/meeting-notes/2024-02-23.md
@@ -5,15 +5,21 @@
 1. Review design doc
 
 ## Notes
-1. Requriement 70 has been completed. Character design is in progross and going well. Combat has been discussed and what needs to be done there has been gone over.
+1. Requirements 70 has been completed. Character design is in progress and going well. Combat has been discussed and what needs to be done there has been gone over.
 
 ## Action Items
-* Group Member `n`
-    * Action Item 1
-    * Action Item 2
-    * Action Item 3
+* Group Member `all`
+  1. keep doing: 
+     * Bella: Data (70)
+     * Heidi: Story (100) (90-91) (40)
+     * Ren: GUI (60-65) (75-80)
+     * Joe: Combat (110-130) 
+  2. adhere to sprint 2-23--3-5
+  2. group member `ren`
+     * wizard spells
+
 
 ## Contributors
 * Bella Brickler
-* Group Member
+* Ren Paxson
 * Group Member
