add filename to make link more clear

--- a/meeting-notes/2024-03-01.md
+++ b/meeting-notes/2024-03-01.md
@@ -6,7 +6,8 @@
 2. solidify what we still need to have the design doc ready by Tuesday
 
 ## Notes
-1. 
+1. Reviewed sprints, story and what needs to be done for UI
+2. Added and tweaked requirements to better reflect game intentions.
 
 ## Action Items
 * Group Member `n`
