edited action items for 3/1

--- a/meeting-notes/2024-03-01.md
+++ b/meeting-notes/2024-03-01.md
@@ -10,8 +10,8 @@
 2. Added and tweaked requirements to better reflect game intentions.
 
 ## Action Items
-* Group Member `n`
-    * x
+* Group Member `all`
+  * keep working on assigned requirements 
 
 ## Contributors
 * Ren Paxson
