--- a/meeting-notes/2024-03-05.md
+++ b/meeting-notes/2024-03-05.md
@@ -20,4 +20,4 @@
 Remove this line. Each Member should directly add their name as a _separate commit_ from the creation of the meeting-minutes.md file
 * Ren Paxson
 * Heidi Raber
-* Group Member
+* Bella Brickler
