added name to meeting minutes

--- a/meeting-notes/2024-03-05.md
+++ b/meeting-notes/2024-03-05.md
@@ -19,3 +19,4 @@ Remove this line. Each Member should directly add their name as a _separate comm
 * Ren Paxson
 * Heidi Raber
 * Bella Brickler
+* Joe Claborn
