--- a/meeting-notes/2024-03-08.md
+++ b/meeting-notes/2024-03-08.md
@@ -6,14 +6,15 @@
 2. Discuss progress on Design Doc
 
 ## Notes
-1. Response to Item 1
-2. Response to Item 2
+1. Went over button container and the possible routes towards implmenting the design.
+2. Went over need to add diagrams to the doc
 
 ## Action Items
-* Group Member `n`
-    * Action Item 1
-    * Action Item 2
-    * Action Item 3
+* Group Member `All`
+    * Keep working on sprint items
+
+* Group Member `Ren,Bella,Heidi`
+    * Create diagrams for design doc
 
 ## Contributors
 * Bella Brickler
