--- a/meeting-notes/2024-03-12.md
+++ b/meeting-notes/2024-03-12.md
@@ -6,14 +6,12 @@
 2. Plan next sprint
 
 ## Notes
-1. Response to Item 1
-2. Response to Item 2
+1. Need a process diagram for UI specifically 
+2. Went over last sprint and added new items to this sprint
 
 ## Action Items
-* Group Member `n`
-    * Action Item 1
-    * Action Item 2
-    * Action Item 3
+* Group Member `all`
+    * Work on sprint items
 
 ## Contributors
 * Bella Brickler
