--- a/meeting-notes/2024-03-22.md
+++ b/meeting-notes/2024-03-22.md
@@ -6,11 +6,14 @@
 2. Find new skin (skin bad)
 
 ## Notes
-1. Went over previous sprint no issues
+1. Went over what everyone was currently working through, discussed combat and buttons
+2. 
 
 ## Action Items
+* Group Member `ren`
+    * Work on skin colors
 * Group Member `all`
-    * Work on sprint items
+    * Continue working on items
 
 ## Contributors
 * Bella Brickler
