--- a/meeting-notes/2024-03-29.md
+++ b/meeting-notes/2024-03-29.md
@@ -6,11 +6,14 @@
 2. what's left?
 
 ## Notes
-1. 
+1. Went over clarifications of events, discussed progress
+2. 
 
 ## Action Items
-* Group Member `n`
-    * Action Item 1
+* Group Member `all`
+    * continue working on sprint items
+* Group Member `Joe`
+    * Do presentation stuff
 
 ## Contributors
 * Ren Paxson
