--- a/meeting-notes/2024-04-02.md
+++ b/meeting-notes/2024-04-02.md
@@ -7,13 +7,24 @@
 3. Go over what is left related to code
 
 ## Notes
-1.
-2. 
-3.
+1.Went over what currently exists for the presentation, PR created
+2. Discussed getting MVP doc done by friday
+3. Game loop + formatting sprites are outstanding tasks
 
 ## Action Items
+* Group Member `bella`
+    * Create MVP
+
+* Group Member `ren`
+    * finish sprites
+
 * Group Member `all`
-    *
+    * contribute as need to presentation slides, wait till friday for MVP gifs/images
+
+* Group Member `heidi`
+    * create story slides
+
+
 
 ## Contributors
 * Ren Paxson
